--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
-Hi ![](https://user-images.githubusercontent.com/18350557/176309783-0785949b-9127-417c-8b55-ab5a4333674e.gif)My name is Geraldine Porras and this is student account, where I upload my college assignments!
+Hi ![](https://user-images.githubusercontent.com/18350557/176309783-0785949b-9127-417c-8b55-ab5a4333674e.gif)My name is Geraldine Porras
 ========================================================================================================================================
 
 Student. Soon to be Information Systems Engieneer.
